[package]
name = "bevy_rng"
version = "0.3.1"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2018"
repository = "https://github.com/rustic-games/bevy_rng"
description = "A Bevy game engine random number generator plugin"
license-file = "LICENSE"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_seeder = "0.2"
rand_xoshiro = "0.6"
bevy = { version = "0.6", default-features = false }
